Fix a typo in code

--- a/Assignment_2_Crawling.ipynb
+++ b/Assignment_2_Crawling.ipynb
@@ -907,7 +907,7 @@
       "cell_type": "code",
       "source": [
         "schema3 = [\n",
-        "    bigquery.SchemaField('imageID', 'INTEGER', mode='REQUIRED'),,\n",
+        "    bigquery.SchemaField('imageID', 'INTEGER', mode='REQUIRED'),\n",
         "    bigquery.SchemaField('personName', 'STRING', mode='REQUIRED')\n",
         "]"
       ],
