--- a/Assignment_2_Crawling.ipynb
+++ b/Assignment_2_Crawling.ipynb
@@ -609,7 +609,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Before creating a table, you need to properly design the table scheme. In this example, we will create a table with three attributes: an integer as partyID, a string as the link, and an array of integer as the date."
+        "Before creating a table, you need to properly design the table schema. In this example, we will create a table with three attributes: an integer as partyID, a string as the link, and an array of integer as the date."
       ]
     },
     {
@@ -908,6 +908,7 @@
       "source": [
         "schema3 = [\n",
         "    bigquery.SchemaField('imageID', 'INTEGER', mode='REQUIRED'),\n",
+        "    bigquery.SchemaField('personID', 'INTEGER', mode='REQUIRED'),\n",
         "    bigquery.SchemaField('personName', 'STRING', mode='REQUIRED')\n",
         "]"
       ],
