--- a/Assignment_2_Crawling.ipynb
+++ b/Assignment_2_Crawling.ipynb
@@ -9,8 +9,7 @@
       "collapsed_sections": [
         "LUhZiGtTxGKQ",
         "-wW8Xr9wxffX"
-      ],
-      "include_colab_link": true
+      ]
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +17,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/msaadsadiq/BigDataCourse/blob/master/Assignment_2_Crawling.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "metadata": {
         "id": "Sjx11HUOtUe4",
@@ -49,10 +38,9 @@
         "## Before you begin\n",
         "**BE AWARE that you can only do a maximum of 96 DML (update, insert, delete) operations on a table per day. Be careful when you do such task in the assignment and start to work on the assignment several days before the deadline**\n",
         "\n",
-        "[New York Social Diary](http://www.newyorksocialdiary.com/) provides a\n",
-        "fascinating lens onto New York's socially well-to-do. The data forms a natural social graph for New York's social elite. Take a look at one of [the recent post](http://www.newyorksocialdiary.com/social-diary/2019/in-the-mood).\n",
+        "[New York Social Diary](http://www.newyorksocialdiary.com/) is a website providing news are reports about the social life of the elite New Yorkers. Take a look at one of [the recent post](http://www.newyorksocialdiary.com/social-diary/2019/in-the-mood). Among these news and articles, you will be able to scatch the social network of the New York's social elites.\n",
         "\n",
-        "You will notice the photos have carefully annotated captions labeling those that appear in the photos.  We can think of this as implicitly implying a social graph: there is a connection between two individuals if they appear in a picture together.\n",
+        "In this project, we will utlize the website and crawl data from it to obtain some latent information in the news and articles. All the photos are carefully captioned and labelled with those who appear in the photos. This give us a perfect chance to analyze the connections between these people. We can assume that people, who appear in the same picture together, have a connection. \n",
         "\n",
         "For this assignment, we will assemble the social graph from photo captions, store the data in BigQuery, and perform some basic analysis on the data."
       ]
@@ -152,11 +140,11 @@
       "metadata": {
         "id": "Vrf0JoP8hqQe",
         "colab_type": "code",
+        "outputId": "72f111ac-7335-4adf-adb9-36e1eca822c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 88
-        },
-        "outputId": "72f111ac-7335-4adf-adb9-36e1eca822c3"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -164,7 +152,7 @@
         "links = soup.find_all('div', attrs={'class':'views-row'})\n",
         "print(links[0])"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,11 +202,11 @@
       "metadata": {
         "id": "3zu1eQENigOt",
         "colab_type": "code",
+        "outputId": "c0ba09ee-da5a-4fb4-d564-4d55bd4139a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c0ba09ee-da5a-4fb4-d564-4d55bd4139a3"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -228,7 +216,7 @@
         "first_date = datetime.strptime(\"\".join(first_link.find_all('span',{'class':'field-content'})[1].get_text()), '%A, %B %d, %Y')\n",
         "print(first_url, first_date)"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,17 +267,17 @@
       "metadata": {
         "id": "HKd1Ehp1i11n",
         "colab_type": "code",
+        "outputId": "0ddf5ed5-70dc-469a-e6cf-cda45f9e10ab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "0ddf5ed5-70dc-469a-e6cf-cda45f9e10ab"
+        }
       },
       "cell_type": "code",
       "source": [
         "get_link_date(links, 49)"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -445,17 +433,17 @@
       "metadata": {
         "id": "F1TpRKGjnJfl",
         "colab_type": "code",
+        "outputId": "24383e95-7e38-4f06-c4b7-35330fed83b8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "24383e95-7e38-4f06-c4b7-35330fed83b8"
+        }
       },
       "cell_type": "code",
       "source": [
         "!pip install requests_futures"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -497,11 +485,11 @@
       "metadata": {
         "id": "z_8JntGHxOPI",
         "colab_type": "code",
+        "outputId": "c7dab2b1-97c7-4319-9594-51a4c0b00931",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c7dab2b1-97c7-4319-9594-51a4c0b00931"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -511,7 +499,7 @@
         "auth.authenticate_user()\n",
         "print('Authenticated')"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -548,11 +536,11 @@
       "metadata": {
         "id": "PzKTQUfd2Rp-",
         "colab_type": "code",
+        "outputId": "004f711f-424f-43bc-ca54-b57c4de0a44c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "004f711f-424f-43bc-ca54-b57c4de0a44c"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -580,7 +568,7 @@
         "   print('Dataset exists')\n",
         "print('Dataset Created')"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -609,7 +597,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Before creating a table, you need to properly design the table schema. In this example, we will create a table with three attributes: an integer as partyID, a string as the link, and an array of integer as the date."
+        "Before creating a table, you need to properly design the table scheme. In this example, we will create a table with three attributes: an integer as partyID, a string as the link, and an array of integer as the date."
       ]
     },
     {
@@ -878,24 +866,23 @@
       },
       "cell_type": "markdown",
       "source": [
-        "In this task, we neglect the fact that there can be multiple persons with the same name.\n",
+        "There are various methods that can be utilized to extract names from the captions. The details are up to you.\n",
         "\n",
-        "There are many ways of going about this, and we leave the details up to you.  Some issues to consider:\n",
+        "Please find the following some hints to implement the method. You do not have to follow all of the hint to achieve a good result. It's okay that if you do not follow any of the hint. This question will be evaluated by the quality of your results.\n",
+        "  1. Some of the captions do not include names, instead,  they can be long narrative texts describe the photos or the events. You can implement some heuristic rules to filter out these captions. For example,\n",
+        "    - Names should be lists of nouns. There are various way to delilver this, for example, a straightforward but slow way is using [`nltk` library in Python to tag part of speech](http://www.nltk.org/book/ch05.html). Alternatively, spaCy's [entity recognition](https://spacy.io/docs/usage/entity-recognition) can detect whether the word is name or not.\n",
+        "    - Look for common patterns in the captions with names (e.g. looking for the phrase `a friend`).\n",
+        "    - It is often not lists of names if the caption is very long. (You may use 250 characters as cutoff)\n",
+        "  2. The captions are in various forms and you will need to separate them accordingly. You may want to use `re.split`, which is more sophisticated but more powerful than `string.split`.\n",
+        "  3. \"ra Lebenthal\" might be found as a name but it is not. You might need to investigate what happens here.\n",
+        "  4. The same person might be referenced with the title, such as \"Mayor Michael Bloomberg\", or not \"Michael Bloomberg\". The title might change over the time as well. The titles might need to be filtered out so all these names can ultimately refer to the same person: \"Michael Bloomberg.\"\n",
+        "  5. Sometimes, the couple might be written as eg. \"John and Mary Smith\" referring to \"John Smith\" and \"Mary Smith\". You might need to handle it.\n",
+        "  6. Check you output frequently and figure out the errors that come up. Then, you can fix the errors iteratively until you have a list that looks reasonable.\n",
+        "  7. You will probably find that the webpages have a slightly different HTML structures, as well as new captions fail your name parser. But don't worry if the parser isn't perfect -- just try to get the easy cases.\n",
         "\n",
-        "  1. Some captions are not useful: they contain long narrative texts that explain the event.  Try to find some heuristic rules to separate captions that are a list of names from those that are not.  A few heuristics include:\n",
-        "    - look for sentences (which have verbs) and as opposed to lists of nouns. For example, [`nltk` does part of speech tagging](http://www.nltk.org/book/ch05.html) but it is a little slow. There may also be heuristics that accomplish the same thing.\n",
-        "    - Similarly, spaCy's [entity recognition](https://spacy.io/docs/usage/entity-recognition) could be useful here.\n",
-        "    - Look for commonly repeated threads (e.g. you might end up picking up the photo credits or people such as \"a friend\").\n",
-        "    - Long captions are often not lists of people.  The cutoff is subjective, but for grading purposes, *set that cutoff at 250 characters*.\n",
-        "  2. You will want to separate the captions based on various forms of punctuation.  Try using `re.split`, which is more sophisticated than `string.split`. **Note**: The reference solution uses regex exclusively for name parsing.\n",
-        "  3. You might find a person named \"ra Lebenthal\".  There is no one by this name.  Can anyone spot what's happening here?\n",
-        "  4. This site is pretty formal and likes to say things like \"Mayor Michael Bloomberg\" after his election but \"Michael Bloomberg\" before his election.  Can you find other ('optional') titles that are being used?  They should probably be filtered out because they ultimately refer to the same person: \"Michael Bloomberg.\"\n",
-        "  5. There is a special case you might find where couples are written as eg. \"John and Mary Smith\". You will need to write some extra logic to make sure this properly parses to two names: \"John Smith\" and \"Mary Smith\".\n",
-        "  6. When parsing names from captions, it can help to look at your output frequently and address the problems that you see coming up, iterating until you have a list that looks reasonable. This is the approach used in the reference solution. Because we can only asymptotically approach perfect identification and entity matching, we have to stop somewhere.\n",
+        "Once you feel that your algorithm is working well on these captions, parse all of the captions and extract all the names mentioned. Sort them alphabetically, by first name, and insert them into a new table with the given schema.\n",
         "\n",
-        "After running this sort of test on a few other pages. You will probably find that the webpages have a slightly different HTML structure, as well as new captions that trip up your caption parser.  But don't worry if the parser isn't perfect -- just try to get the easy cases.\n",
-        "\n",
-        "Once you feel that your algorithm is working well on these captions, parse all of the captions and extract all the names mentioned.  Sort them alphabetically, by first name, and insert them into a new table with the given schema.\n"
+        "In this task, we neglect the fact that there can be multiple persons with the same name."
       ]
     },
     {
@@ -907,8 +894,7 @@
       "cell_type": "code",
       "source": [
         "schema3 = [\n",
-        "    bigquery.SchemaField('imageID', 'INTEGER', mode='REQUIRED'),\n",
-        "    bigquery.SchemaField('personID', 'INTEGER', mode='REQUIRED'),\n",
+        "    bigquery.SchemaField('imageID', 'INTEGER', mode='REQUIRED'),,\n",
         "    bigquery.SchemaField('personName', 'STRING', mode='REQUIRED')\n",
         "]"
       ],
