--- a/Assignment_2_Crawling.ipynb
+++ b/Assignment_2_Crawling.ipynb
@@ -72,7 +72,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Take a look at [the archive page of party pictures](www.newyorksocialdiary.com/party-pictures).\n",
+        "Take a look at [the archive page of party pictures](http://www.newyorksocialdiary.com/party-pictures).\n",
         "You will find a list of links, each of which points at a post of party pictures. On each page, 50 links are presented.\n",
         "\n",
         "In the following, we will get the url for each party page, along with its date.\n",
