--- a/Assignment_2_Crawling.ipynb
+++ b/Assignment_2_Crawling.ipynb
@@ -747,7 +747,7 @@
         "  SELECT \n",
         "    COUNT(*) as total\n",
         "  FROM `assignment2_dataset.party`''').to_dataframe().total[0]\n",
-        "assert row_count == len(list_link)"
+        "assert row_count == len(link_list)"
       ],
       "execution_count": 0,
       "outputs": []
