--- a/Assignment_3_PySpark.ipynb
+++ b/Assignment_3_PySpark.ipynb
@@ -7,11 +7,9 @@
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [
-        "P2dz95IU8QJb",
-        "48KU9aLS8Yd5",
-        "2yMqk7MVoyfh"
+        "2yMqk7MVoyfh",
+        "iE7RT7LipZQ7"
       ],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,10 +53,10 @@
       "metadata": {
         "id": "pZrs8Onl5Vns",
         "colab_type": "code",
-        "outputId": "6d22269b-24dc-455d-b238-954af48c286b",
+        "outputId": "54ee6bd9-6759-4e4d-deb0-92f7a4e1ba81",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         }
       },
       "cell_type": "code",
@@ -69,7 +67,7 @@
         "auth.authenticate_user()\n",
         "print('Authenticated')"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,19 +97,6 @@
       "cell_type": "code",
       "source": [
         "project_id = 'ece795'"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "WxQ6TB_N8omQ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "from google.cloud import "
       ],
       "execution_count": 0,
       "outputs": []
@@ -173,7 +158,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "#### This word count example is similar to the one introduced earlier. It will use the Shakespeare dataset in BigQuery. The only difference is that instead of using Hadoop, it uses PySpark which is a Python library for Spark"
+        "#### This word count example will use the Shakespeare dataset in BigQuery. The only difference is that instead of using Hadoop, it uses PySpark which is a Python library for Spark"
       ]
     },
     {
@@ -249,21 +234,22 @@
       "cell_type": "markdown",
       "source": [
         "#### Step 3: modify the code and upload it to Cloud Storage. Download the following code from here\n",
+        "\n",
+        "Change the input and output directory strings. Replace the {} symbols with your Cloud Storage Bucket id.\n",
+        "\n",
         "input_directory =\n",
-        "'gs://{}/hadoop/tmp/bigquery/pyspark_input'.format(bucket)\n",
-        "Replace the {} symbols with your Cloud Storage Bucket id.\n",
+        "'gs://{}/hadoop/tmp/bigquery/pyspark_input'.\n",
+        "output_directory =\n",
+        "\n",
+        "'gs://{}/hadoop/tmp/bigquery/pyspark_output'\n",
+        "\n",
+        "\n",
+        "make sure that your dataset name and table name matches your bigQuery\n",
         "\n",
         "output_dataset = 'wordcount_dataset'\n",
         "output_table = 'wordcount_table'\n",
         "\n",
-        "Set the corresponding dataset name and table name of your output table (created in Step 1).\n",
-        "\n",
-        "output_directory =\n",
-        "\n",
-        "similar to input_directory, assign the correct Cloud Storage Bucket id here.\n",
-        "\n",
-        "Then, upload the python file to your Cloud Storage and get the link to it. We will use this link as input to\n",
-        "our PySpark job."
+        "Upload the python file to your Cloud Storage. We will use this link as input to our PySpark job."
       ]
     },
     {
@@ -303,8 +289,8 @@
         "}\n",
         "\n",
         "# Output Parameters.\n",
-        "output_dataset = 'wordcount_dataset'\n",
-        "output_table = 'wordcount_output'\n",
+        "output_dataset = 'wc_class'\n",
+        "output_table = 'wc1'\n",
         "\n",
         "# Load data in from BigQuery.\n",
         "table_data = sc.newAPIHadoopRDD(\n",
@@ -784,10 +770,26 @@
       },
       "cell_type": "markdown",
       "source": [
-        "1. Crawl 10,000 Tweets about any topic you like (english language, must be a topic of divide i.e. having more than one view)\n",
+        "1. Download 10,000 Tweets about any topic you like (english language, must be a topic of divide i.e. having more than one view)\n",
         "\n",
         "2. Save them as csv and Upload Tweets to storage bucket\n",
         "3. Using PySpark run the sentiment analysis on those tweets using the model you trained earlier  "
+      ]
+    },
+    {
+      "metadata": {
+        "id": "LppHOfZWgNVY",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##### Twitter Datasets\n",
+        "\n",
+        "https://data.world/datasets/twitter\n",
+        "https://www.kaggle.com/crowdflower/twitter-airline-sentiment\n",
+        "https://www.kaggle.com/crowdflower/first-gop-debate-twitter-sentiment\n",
+        "https://www.kaggle.com/shashank1558/preprocessed-twitter-tweets\n",
+        "https://www.kaggle.com/kazanova/sentiment140"
       ]
     },
     {
