--- a/Assignment_3_PySpark.ipynb
+++ b/Assignment_3_PySpark.ipynb
@@ -7,7 +7,6 @@
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [
-        "2yMqk7MVoyfh",
         "iE7RT7LipZQ7"
       ],
       "include_colab_link": true
@@ -406,7 +405,7 @@
       "cell_type": "markdown",
       "source": [
         " #### Reference. \n",
-        "https://piazza.com/class_profile/get_resource/j1318wb5md21wb/j2jthscnpkb5zu"
+        "https://cloud.google.com/dataproc/docs/tutorials/bigquery-connector-spark-example"
       ]
     },
     {
@@ -463,38 +462,42 @@
       "metadata": {
         "id": "XXP1UILh3utG",
         "colab_type": "code",
-        "outputId": "cf290e87-28d4-42b7-9a52-e522b639bf0d",
+        "outputId": "af459dc5-92a4-401c-b6da-ef63cdf700f3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 272
+          "height": 362
         }
       },
       "cell_type": "code",
       "source": [
         "!wget http://cs.stanford.edu/people/alecmgo/trainingandtestdata.zip\n",
         "!unzip trainingandtestdata.zip   \n",
-        "!rm trainingandtestdata.zip.1 test*.csv\n"
+        "!rm trainingandtestdata.zip test*.csv\n"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "URL transformed to HTTPS due to an HSTS policy\n",
-            "--2019-03-04 22:47:26--  https://cs.stanford.edu/people/alecmgo/trainingandtestdata.zip\n",
+            "--2019-03-07 14:57:46--  http://cs.stanford.edu/people/alecmgo/trainingandtestdata.zip\n",
             "Resolving cs.stanford.edu (cs.stanford.edu)... 171.64.64.64\n",
+            "Connecting to cs.stanford.edu (cs.stanford.edu)|171.64.64.64|:80... connected.\n",
+            "HTTP request sent, awaiting response... 301 Moved Permanently\n",
+            "Location: https://cs.stanford.edu/people/alecmgo/trainingandtestdata.zip [following]\n",
+            "--2019-03-07 14:57:46--  https://cs.stanford.edu/people/alecmgo/trainingandtestdata.zip\n",
             "Connecting to cs.stanford.edu (cs.stanford.edu)|171.64.64.64|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 81363704 (78M) [application/zip]\n",
-            "Saving to: ‘trainingandtestdata.zip.1’\n",
+            "Saving to: ‘trainingandtestdata.zip’\n",
             "\n",
-            "trainingandtestdata 100%[===================>]  77.59M  68.3MB/s    in 1.1s    \n",
+            "trainingandtestdata 100%[===================>]  77.59M  10.1MB/s    in 7.7s    \n",
             "\n",
-            "2019-03-04 22:47:28 (68.3 MB/s) - ‘trainingandtestdata.zip.1’ saved [81363704/81363704]\n",
+            "2019-03-07 14:57:54 (10.1 MB/s) - ‘trainingandtestdata.zip’ saved [81363704/81363704]\n",
             "\n",
             "Archive:  trainingandtestdata.zip\n",
             "  inflating: testdata.manual.2009.06.14.csv  \n",
-            "  inflating: training.1600000.processed.noemoticon.csv  \n"
+            "  inflating: training.1600000.processed.noemoticon.csv  \n",
+            "rm: cannot remove 'trainingandtestdata.zip.1': No such file or directory\n"
           ],
           "name": "stdout"
         }
@@ -526,6 +529,19 @@
         "\t# save both train and test as CSV files\n",
         "\ttrain.to_csv('pyspark_sa_train_data.csv')\n",
         "\ttest.to_csv('pyspark_sa_test_data.csv')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "6-JqDcJfqgu0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "main()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -810,7 +826,7 @@
       "cell_type": "markdown",
       "source": [
         "1. Perform word count on your tweets\n",
-        "2. Performa word count on the different stances"
+        "2. Perform a word count on the different stances"
       ]
     }
   ]
