--- a/Assignment_3_PySpark.ipynb
+++ b/Assignment_3_PySpark.ipynb
@@ -7,6 +7,7 @@
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [
+        "2yMqk7MVoyfh",
         "iE7RT7LipZQ7"
       ],
       "include_colab_link": true
@@ -266,9 +267,11 @@
         "import pprint\n",
         "import subprocess\n",
         "import pyspark\n",
+        "from pyspark.context import SparkContext\n",
         "from pyspark.sql import SQLContext\n",
         "\n",
-        "sc = pyspark.SparkContext()\n",
+        "sc = SparkContext()\n",
+        "spark = SparkSession(sc)\n",
         "\n",
         "# Use the Cloud Storage bucket for temporary BigQuery export data used\n",
         "# by the InputFormat. This assumes the Cloud Storage connector for\n",
@@ -288,11 +291,11 @@
         "}\n",
         "\n",
         "# Output Parameters.\n",
-        "output_dataset = 'wc_class'\n",
-        "output_table = 'wc1'\n",
+        "output_dataset = 'wordcount_dataset'\n",
+        "output_table = 'wordcount_output'\n",
         "\n",
         "# Load data in from BigQuery.\n",
-        "table_data = sc.newAPIHadoopRDD(\n",
+        "table_data = spark.sparkContext.newAPIHadoopRDD(\n",
         "    'com.google.cloud.hadoop.io.bigquery.JsonTextBigQueryInputFormat',\n",
         "    'org.apache.hadoop.io.LongWritable',\n",
         "    'com.google.gson.JsonObject',\n",
@@ -405,7 +408,8 @@
       "cell_type": "markdown",
       "source": [
         " #### Reference. \n",
-        "https://cloud.google.com/dataproc/docs/tutorials/bigquery-connector-spark-example"
+        "https://cloud.google.com/dataproc/docs/tutorials/bigquery-connector-spark-example\n",
+        "https://piazza.com/class_profile/get_resource/j1318wb5md21wb/j2jthscnpkb5zu"
       ]
     },
     {
