--- a/Assignment_3_PySpark.ipynb
+++ b/Assignment_3_PySpark.ipynb
@@ -53,7 +53,7 @@
       "metadata": {
         "id": "pZrs8Onl5Vns",
         "colab_type": "code",
-        "outputId": "54ee6bd9-6759-4e4d-deb0-92f7a4e1ba81",
+        "outputId": "8d23621f-6056-45ac-e0d7-460ae8e5c201",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -67,7 +67,7 @@
         "auth.authenticate_user()\n",
         "print('Authenticated')"
       ],
-      "execution_count": 1,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -466,10 +466,10 @@
       "metadata": {
         "id": "XXP1UILh3utG",
         "colab_type": "code",
-        "outputId": "af459dc5-92a4-401c-b6da-ef63cdf700f3",
+        "outputId": "07378a1e-3faf-4a64-fde2-6123ee8a2d83",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 362
+          "height": 311
         }
       },
       "cell_type": "code",
@@ -478,30 +478,26 @@
         "!unzip trainingandtestdata.zip   \n",
         "!rm trainingandtestdata.zip test*.csv\n"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2019-03-07 14:57:46--  http://cs.stanford.edu/people/alecmgo/trainingandtestdata.zip\n",
+            "URL transformed to HTTPS due to an HSTS policy\n",
+            "--2019-03-07 17:55:57--  https://cs.stanford.edu/people/alecmgo/trainingandtestdata.zip\n",
             "Resolving cs.stanford.edu (cs.stanford.edu)... 171.64.64.64\n",
-            "Connecting to cs.stanford.edu (cs.stanford.edu)|171.64.64.64|:80... connected.\n",
-            "HTTP request sent, awaiting response... 301 Moved Permanently\n",
-            "Location: https://cs.stanford.edu/people/alecmgo/trainingandtestdata.zip [following]\n",
-            "--2019-03-07 14:57:46--  https://cs.stanford.edu/people/alecmgo/trainingandtestdata.zip\n",
             "Connecting to cs.stanford.edu (cs.stanford.edu)|171.64.64.64|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 81363704 (78M) [application/zip]\n",
             "Saving to: ‘trainingandtestdata.zip’\n",
             "\n",
-            "trainingandtestdata 100%[===================>]  77.59M  10.1MB/s    in 7.7s    \n",
+            "trainingandtestdata 100%[===================>]  77.59M  13.4MB/s    in 5.8s    \n",
             "\n",
-            "2019-03-07 14:57:54 (10.1 MB/s) - ‘trainingandtestdata.zip’ saved [81363704/81363704]\n",
+            "2019-03-07 17:56:03 (13.4 MB/s) - ‘trainingandtestdata.zip’ saved [81363704/81363704]\n",
             "\n",
             "Archive:  trainingandtestdata.zip\n",
             "  inflating: testdata.manual.2009.06.14.csv  \n",
-            "  inflating: training.1600000.processed.noemoticon.csv  \n",
-            "rm: cannot remove 'trainingandtestdata.zip.1': No such file or directory\n"
+            "replace training.1600000.processed.noemoticon.csv? [y]es, [n]o, [A]ll, [N]one, [r]ename: "
           ],
           "name": "stdout"
         }
@@ -793,7 +789,8 @@
         "1. Download 10,000 Tweets about any topic you like (english language, must be a topic of divide i.e. having more than one view)\n",
         "\n",
         "2. Save them as csv and Upload Tweets to storage bucket\n",
-        "3. Using PySpark run the sentiment analysis on those tweets using the model you trained earlier  "
+        "3. Using PySpark run the sentiment analysis on those tweets using the model you trained earlier  \n",
+        "https://gist.github.com/yanofsky/5436496"
       ]
     },
     {
