--- a/Assignment_3_PySpark.ipynb
+++ b/Assignment_3_PySpark.ipynb
@@ -67,7 +67,7 @@
         "auth.authenticate_user()\n",
         "print('Authenticated')"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,31 +168,20 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Step 1: create the output table in BigQuery. We need a table to store the output of our Map Reduce procedure.\n",
+        "Step 1: create a dataset named \"wordcount_dataset\"\n",
         "- Select your project or create a new one, remember to enable billing\n",
         "- Go to Big Query\n",
-        "- Create a dataset, then a table using the following schema"
+        "- Create a dataset, and name it wordcount_dataset"
       ]
     },
     {
       "metadata": {
-        "id": "YcsIufCZquoj",
+        "id": "2CZUAdrPyx_h",
         "colab_type": "text"
       },
       "cell_type": "markdown",
       "source": [
-        "![alt text](https://github.com/msaadsadiq/BigDataCourse/blob/master/Assgn3_img1.png?raw=true)"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "ft6ikACOrWbk",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "Example: my project is “cuong-project1”, dataset is “wc_class”, and output table is “wc1”. The output\n",
-        "table has two fields: word and word_count. We will need these fields to store the output."
+        "![alt text](https://github.com/msaadsadiq/BigDataCourse/blob/master/Assign3_img11.png?raw=true)"
       ]
     },
     {
@@ -243,12 +232,6 @@
         "\n",
         "'gs://{}/hadoop/tmp/bigquery/pyspark_output'\n",
         "\n",
-        "\n",
-        "make sure that your dataset name and table name matches your bigQuery\n",
-        "\n",
-        "output_dataset = 'wordcount_dataset'\n",
-        "output_table = 'wordcount_table'\n",
-        "\n",
         "Upload the python file to your Cloud Storage. We will use this link as input to our PySpark job."
       ]
     },
@@ -267,11 +250,9 @@
         "import pprint\n",
         "import subprocess\n",
         "import pyspark\n",
-        "from pyspark.context import SparkContext\n",
         "from pyspark.sql import SQLContext\n",
         "\n",
-        "sc = SparkContext()\n",
-        "spark = SparkSession(sc)\n",
+        "sc = pyspark.SparkContext()\n",
         "\n",
         "# Use the Cloud Storage bucket for temporary BigQuery export data used\n",
         "# by the InputFormat. This assumes the Cloud Storage connector for\n",
@@ -295,7 +276,7 @@
         "output_table = 'wordcount_output'\n",
         "\n",
         "# Load data in from BigQuery.\n",
-        "table_data = spark.sparkContext.newAPIHadoopRDD(\n",
+        "table_data = sc.newAPIHadoopRDD(\n",
         "    'com.google.cloud.hadoop.io.bigquery.JsonTextBigQueryInputFormat',\n",
         "    'org.apache.hadoop.io.LongWritable',\n",
         "    'com.google.gson.JsonObject',\n",
@@ -377,7 +358,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "![alt text](https://github.com/msaadsadiq/BigDataCourse/blob/master/Assgn3_img4.png?raw=true)"
+        "![alt text](https://github.com/msaadsadiq/BigDataCourse/blob/master/Assgn3_img12.png?raw=true)"
       ]
     },
     {
@@ -803,9 +784,13 @@
         "##### Twitter Datasets\n",
         "\n",
         "https://data.world/datasets/twitter\n",
+        "\n",
         "https://www.kaggle.com/crowdflower/twitter-airline-sentiment\n",
+        "\n",
         "https://www.kaggle.com/crowdflower/first-gop-debate-twitter-sentiment\n",
+        "\n",
         "https://www.kaggle.com/shashank1558/preprocessed-twitter-tweets\n",
+        "\n",
         "https://www.kaggle.com/kazanova/sentiment140"
       ]
     },
