--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -61,7 +61,14 @@
       },
       "cell_type": "markdown",
       "source": [
-        "You always need to setup the environment in Google Cloud Platform as you did in Assignment 3."
+        "You always need to setup the environment in Google Cloud Platform as you did in Assignment 3.\n",
+        "\n",
+        "Please reference the [document](https://cloud.google.com/compute/docs/instances/connecting-advanced#thirdpartytools) to use ssh to connect to the instances in the cluster. Please reference the [document](https://cloud.google.com/compute/docs/instances/connecting-advanced#root) to connect to the instances as the root user. (You may need this to install some software)\n",
+        "\n",
+        "The HDFS configured in the cluster is automatically linked to bucket (Google Storage). To access the storage, you can simply replace `hdfs://` with `gs://` in command line with `hadoop`.\n",
+        "For example, to put a local file in cluster to the root of the bucket, you can simply use `hadoop fs -put /path/to/local/file gs://`.\n",
+        "\n",
+        "Please email yxt128@miami.edu if you have any question regarding using GCP and the project.\n"
       ]
     },
     {
